# SWL2001-Zephyr

./: CHANGELOG.md  CMakeLists.txt  README.md  west.yml
drivers/: CMakeLists.txt  Kconfig
drivers/apps_common/: CMakeLists.txt  Kconfig
drivers/apps_common/printers/: .clang-format  smtc_modem_api_str.c  smtc_modem_api_str.h
drivers/apps_common/smtc_app/: smtc_app.c  smtc_app.h
drivers/ral_lr11xx_bsp_impl/: ral_lr11xx_bsp.c
drivers/smtc_modem_hal_impl/: smtc_modem_hal.c  smtc_modem_hal_init.h
drivers/smtc_modem_hal_impl/logging/: smtc_modem_hal_additional_prints.c  smtc_modem_hal_additional_prints.h  smtc_modem_hal_dbg_trace.h
samples/almanac_update/: README.md
samples/almanac_update/src/: main.c
samples/custom_context_storage/: README.md  prj.conf
samples/custom_context_storage/src/: main.c
samples/dm_info/: README.md
samples/dm_info/src/: main.c
samples/large_file_upload/: CMakeLists.txt  README.md  prj.conf
samples/large_file_upload/src/: file.h  main.c
samples/lorawan/: README.md  prj.conf
samples/lorawan/src/: main.c
samples/lorawan_asynchronous/: README.md  prj.conf
samples/lorawan_asynchronous/src/: main.c
samples/lorawan_asynchronous_fhss/: README.md
samples/lorawan_asynchronous_fhss/boards/: nrf52840dk_nrf52840.overlay
samples/lorawan_asynchronous_fhss/src/: main.c
samples/lorawan_class_b/: README.md  prj.conf
samples/lorawan_class_b/src/: main.c
samples/lorawan_multicast_class_b/: CMakeLists.txt  README.md  prj.conf
samples/lorawan_multicast_class_b/src/: main.c
samples/lorawan_multicast_class_c/: README.md  prj.conf
samples/lorawan_multicast_class_c/src/: main.c
samples/stream/: CMakeLists.txt  README.md  prj.conf
samples/stream/src/: main.c
samples/time_sync/: README.md  prj.conf
samples/time_sync/boards/: nrf52840dk_nrf52840.overlay
samples/time_sync/src/: main.c
samples/tx_rx_continous/: README.md  prj.conf
samples/tx_rx_continous/src/: main.c
zephyr/: module.yml
